// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button initial render (connected) 1`] = `
<button
  class="v-facebook-login"
  style="transition: background-color 0.15s ease-in-out;"
>
   
  <!---->
   
  <!---->
   
  <span>
    <!---->
     Logout 
    <!---->
     
    <!---->
  </span>
   
</button>
`;

exports[`Button initial render (disabled) 1`] = `
<button
  class="v-facebook-login"
  disabled="disabled"
  style="transition: background-color 0.15s ease-in-out;"
>
   
  <!---->
   
  <svg
    class="logo"
    fill="currentColor"
    height="24"
    viewBox="0 0 167.657 167.657"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <g>
      <path
        d="M83.829,0.349C37.532,0.349,0,37.881,0,84.178c0,41.523,30.222,75.911,69.848,82.57v-65.081H49.626
		v-23.42h20.222V60.978c0-20.037,12.238-30.956,30.115-30.956c8.562,0,15.92,0.638,18.056,0.919v20.944l-12.399,0.006
		c-9.72,0-11.594,4.618-11.594,11.397v14.947h23.193l-3.025,23.42H94.026v65.653c41.476-5.048,73.631-40.312,73.631-83.154
		C167.657,37.881,130.125,0.349,83.829,0.349z"
      />
    </g>
  </svg>
   
  <span>
    Continue with Facebook 
    <!---->
     
    <!---->
     
    <!---->
  </span>
   
</button>
`;

exports[`Button initial render (disconnected) 1`] = `
<button
  class="v-facebook-login"
  style="transition: background-color 0.15s ease-in-out;"
>
   
  <!---->
   
  <svg
    class="logo"
    fill="currentColor"
    height="24"
    viewBox="0 0 167.657 167.657"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <g>
      <path
        d="M83.829,0.349C37.532,0.349,0,37.881,0,84.178c0,41.523,30.222,75.911,69.848,82.57v-65.081H49.626
		v-23.42h20.222V60.978c0-20.037,12.238-30.956,30.115-30.956c8.562,0,15.92,0.638,18.056,0.919v20.944l-12.399,0.006
		c-9.72,0-11.594,4.618-11.594,11.397v14.947h23.193l-3.025,23.42H94.026v65.653c41.476-5.048,73.631-40.312,73.631-83.154
		C167.657,37.881,130.125,0.349,83.829,0.349z"
      />
    </g>
  </svg>
   
  <span>
    Continue with Facebook 
    <!---->
     
    <!---->
     
    <!---->
  </span>
   
</button>
`;

exports[`Button logout scoped-slot 1`] = `
<button
  class="v-facebook-login"
  style="transition: background-color 0.15s ease-in-out;"
>
   
  <!---->
   
  <!---->
   
  <span>
    <!---->
     
    <div
      class="logout"
    >
      {
  "idle": true,
  "error": null,
  "hasError": false,
  "working": false,
  "enabled": true,
  "disabled": false,
  "connected": true,
  "disconnected": false
}
    </div>
     
    <!---->
     
    <!---->
  </span>
   
</button>
`;

exports[`Button logout slot 1`] = `
<button
  class="v-facebook-login"
  style="transition: background-color 0.15s ease-in-out;"
>
   
  <!---->
   
  <!---->
   
  <span>
    <!---->
     
    <div
      class="logout"
    />
     
    <!---->
     
    <!---->
  </span>
   
</button>
`;

exports[`Button scoped-slots 1`] = `
<button
  class="v-facebook-login"
  disabled="disabled"
  style="transition: background-color 0.15s ease-in-out;"
>
  <div
    class="before"
  >
    {
  "idle": false,
  "error": {},
  "hasError": true,
  "working": false,
  "enabled": false,
  "disabled": true,
  "connected": false,
  "disconnected": true
}
  </div>
   
  <!---->
   
  <!---->
   
  <span>
    <!---->
     
    <!---->
     
    <!---->
     
    <div
      class="error"
    >
      {
  "idle": false,
  "error": {},
  "hasError": true,
  "working": false,
  "enabled": false,
  "disabled": true,
  "connected": false,
  "disconnected": true
}
    </div>
  </span>
   
  <div
    class="after"
  >
    {
  "idle": false,
  "error": {},
  "hasError": true,
  "working": false,
  "enabled": false,
  "disabled": true,
  "connected": false,
  "disconnected": true
}
  </div>
</button>
`;

exports[`Button slots 1`] = `
<button
  class="v-facebook-login"
  disabled="disabled"
  style="transition: background-color 0.15s ease-in-out;"
>
  <div
    class="before"
  />
   
  <!---->
   
  <!---->
   
  <span>
    <!---->
     
    <!---->
     
    <!---->
     
    <div
      class="error"
    />
  </span>
   
  <div
    class="after"
  />
</button>
`;
